# skills-manager-client

./: .gitignore  BUILD_TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  DIRECTORY_STRUCTURE.md  NEW_FEATURES.md  PACKAGING.md  QUICKSTART.md  README-GITHUB.md  README.md  README_en.md  README_zh.md  RELEASE_NOTES.md  SECURITY.md  TAURI_INSTRUCTIONS.md  build-windows.bat  findings.md  install-msvc.bat  package-lock.json  package.json  progress.md  tailwind.config.js  task_plan.md
.github/workflows/: build-macos.yml  build-windows.yml  build.yml  release.yml  sync-data.yml
docs/: README_EN.md  REMOTE_INIT.md
public/data/: marketplace.json
release-data/: config.json
scripts/: download-skill.js
server/: config.json  index.js
server/security/: rules.js  scanner.js
server/update/: checker.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  security.rs  skills.rs
src/components/: SecurityReportCard.tsx
src/components/common/: ErrorBoundary.tsx
src/components/layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
src/i18n/: index.ts
src/pages/: Dashboard.tsx  Marketplace.tsx  MySkills.tsx  Security.tsx  Settings.tsx
src/store/: useSkillStore.ts
src/types/: index.ts
src/utils/: i18n.ts
