[package]
name = "skill-manager"
version = "1.0.0"
description = "A Skill Manager for Claude Code"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
walkdir = "2"
glob = "0.3"
yaml-rust = "0.4"
dirs = "5"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
zip = "2.1"
rfd = "0.17.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
